samples/_failures_safe/1761154621_404d0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a54a6263.c: In function ‘main’:
./samples/SAFE/__tmp_a54a6263.c:201:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  201 |     int token
      |     ^~~
./samples/SAFE/__tmp_a54a6263.c:201:5: error: expected declaration or statement at end of input
